[package]
name = "sn0int"
version = "0.16.0"
description = "Semi-automatic OSINT framework and package manager"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sn0int"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/sn0int" }

[workspace]
members = ["sn0int-common",
           "sn0int-registry",
           "sn0int-std"]

[features]
sqlite-bundled = ["libsqlite3-sys/bundled"]

[dependencies]
sn0int-common = { version="0.9.0", path="sn0int-common" }
sn0int-std = { version="0.16.0", path="sn0int-std" }
rustyline = "6.0"
log = "0.4"
env_logger = "0.7"
hlua-badtouch = "0.4"
structopt = "0.3"
failure = "0.1"
rand = "0.7"
colored = "1.6"
lazy_static = "1.0"
shellwords = "1.0"
diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
libsqlite3-sys = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2.0"
url = "2.0"
percent-encoding = "2.1"
#chrootable-https = { path = "../chrootable-https" }
chrootable-https = "0.14"
base64 = "0.11"
data-encoding = "2.1.2"
serde_urlencoded = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam-channel = "0.4"
ctrlc = "3.1"
opener = "0.4"
separator = "0.4"
maplit = "1.0.1"
sloppy-rfc4880 = "0.1.5"
regex = "1.0"
toml = "0.5"
threadpool = "1.7"
atty = "0.2"
semver = "0.9"
bytes = "0.4"
bytesize = "1.0"
ipnetwork = "0.16"
strum = "0.17"
strum_macros = "0.17"

digest = "0.8.0"
md-5 = "0.8.0"
sha-1 = "0.8.1"
sha2 = "0.8.0"
sha3 = "0.8.0"
hmac = "0.7"

walkdir = "2.2"
nude = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
caps = "0.3"
#syscallz = { path="../syscallz-rs" }
syscallz = "0.12"
nix = "0.17"

[target.'cfg(target_os="openbsd")'.dependencies]
pledge = "0.3.1"
unveil = "0.2.0"

[dev-dependencies]
#boxxy = { path = "../boxxy-rs" }
boxxy = "0.11"
tempfile = "3.0"
