[package]
name = "sn0int-registry"
version = "0.1.0"
authors = ["kpcyrd <git@rxv.cc>"]

[dependencies]
sn0int-common = { path="sn0int-common" }
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"

diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
diesel_full_text_search = "1.0.1"

reqwest = "0.9.2"
oauth2 = "2.0.0-alpha.2"
failure = "0.1"
url = "1.0"
log = "0.4"

serde = "1.0"
serde_derive = "1.0"

dotenv = "0.13"
