[package]
name = "sn0int-registry"
version = "0.5.0"
description = "sn0int registry"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sn0int"
edition = "2018"

[dependencies]
sn0int-common = { version="0.6.0", path="sn0int-common" }
rocket = { version = "0.4", default-features=false }
rocket_failure = { version = "0.1.2", features = ["with-rocket"] }
rocket_contrib = { version = "0.4", features = ["handlebars_templates"] }

diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
diesel_full_text_search = "1.0.1"

reqwest = "0.9.2"
oauth2 = "2.0.0-alpha.2"
failure = "0.1"
url = "1.0"
log = "0.4"
semver = "0.9.0"
lazy_static = "1"
blake2 = "0.8.0"
hex = "0.3.1"
maplit = "1.0.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

dotenv = "0.13"

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev="c86f4312fb273c0380fb76a97bfb7fc227800542" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev="c86f4312fb273c0380fb76a97bfb7fc227800542" }
