[package]
name = "sn0int-registry"
version = "0.5.0"
description = "sn0int registry"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sn0int"
edition = "2018"

[dependencies]
sn0int-common = { version="0.13.0", path="../sn0int-common" }
rocket = { version = "0.4", default-features=false }
#rocket_failure = { path = "../../rocket_failure" }
rocket_failure = { version = "0.2" }
rocket_contrib = { version = "0.4.1", features = ["handlebars_templates"] }

diesel = { version = "1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
diesel_full_text_search = "1.0.1"

reqwest = "0.9.2"
oauth2 = "2.0.0"
failure = "0.1"
url = "1.0"
log = "0.4"
semver = "1"
lazy_static = "1"
blake2 = "0.8.0"
hex = "0.4"
maplit = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "3.3"

dotenv = "0.15"
env_logger = "0.9"
structopt = "0.3.21"
