[package]
name = "sn0int-std"
version = "0.19.0"
description = "sn0int - stdlib"
authors = ["kpcyrd <git@rxv.cc>"]
repository = "https://github.com/kpcyrd/sn0int"
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
failure = "0.1"
hlua-badtouch = "0.4"
tokio = "0.1.14"
rand = "0.7"
regex = "1.0"
rustls = { version="0.18", features=["dangerous_configuration"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
webpki = "0.21"
webpki-roots = "0.20"
ct-logs = "0.7"
#chrootable-https = { path = "../../chrootable-https" }
chrootable-https = "0.16"
http = "0.2"
bufstream = "0.1.4"
pem = "0.8"
url = "2.0"
tungstenite = { version = "0.11", default-features = false }
kuchiki = "0.8.0"
maxminddb = "0.14"
x509-parser = "0.8.2"
der-parser = "4.1"
publicsuffix = { version="1.5", default-features=false }
xml-rs = "0.8"
geo = "0.14"
bytes = "0.4"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
mqtt-protocol = "0.8.1"
sodiumoxide = { version="0.2.5", features=["use-pkg-config"] }

image = "0.23.0"
kamadak-exif = "0.5.1"

bs58 = "0.3"
digest = "0.9"
blake2 = "0.9"

[dev-dependencies]
env_logger = "0.7"
maplit = "1.0.1"
