[package]
name = "sn0int-common"
version = "0.9.0"
description = "sn0int - common code"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sn0int"
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
#rocket_failure_errors = { path = "../../../rocket_failure/rocket_failure_errors" }
rocket_failure_errors = "0.2"
failure = "0.1"
nom = "5.0"
